Fixed area resize: it works fine with attribute rows. Fixed empty if statement containing whitespace, newline, etc. considered true.

--- a/src/components/Textarea.module.css
+++ b/src/components/Textarea.module.css
@@ -2,7 +2,7 @@
     width: 80%;
     /*height: auto; !* Set height to auto for auto-resizing *!*/
     min-height: 38px; /* Set a minimum height */
-    resize: vertical; /* Disable vertical resizing */
+    resize: none; /* Disable vertical resizing */
     overflow-y: hidden;
     padding: 10px;
     border: 1px solid #ccc;
